# dominion-meta-sim

./: README.md  main.py  pyproject.toml
src/dominion_meta_sim/: main.py  run_fitness_demo.py  run_update_demo.py
src/dominion_meta_sim/agents/: bot_factory.py  parametric_bot.py  strategy.py
src/dominion_meta_sim/evolution/: fitness.py  meta_network.py  population.py
src/dominion_meta_sim/game/: pyminion_adapter.py
